--- a/mvc3/appsettings.Development.json
+++ b/mvc3/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+   "DefaultConnection":"server=.;DataBase=mvcdemo3;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
