Refactor solution, update naming, and remove Razor views
- Renamed delete to Delete in IGenericRepositories and its implementation to follow C# conventions; simplified method to expression-bodied.
- Added missing LastName property to ApplicationUser and adjusted formatting.
- Updated connection string in appsettings.json for consistent casing.
- Replaced mvc3.sln with HRManagmentSystem.sln, preserving projects under new solution name.
- Removed all Razor view files, likely for UI redesign or refactor.

--- a/mvc3/appsettings.json
+++ b/mvc3/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "defaultconnection" : "server=.;DataBase=mvcdemo3;Trusted_Connection=True;TrustServerCertificate=true"
+    "defaultconnection" : "Server=.;DataBase=mvcdemo3;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
